Fixes: #538
Better schema refs