@@ -21,34 +21,25 @@ import static java.util.Objects.requireNonNull;
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.json.JsonMapper;
+import com.fasterxml.jackson.databind.util.ClassUtil;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
+import org.apache.avro.Schema;
 
 /**
- * Helper for finding schema references within an Avro schema.
+ * Helper for finding external schema references within an Avro schema.
  *
- * <p>To be found, a reference to another type must have a {@code subject} defined. Any type with a
- * {@code subject} defined will also be inspected for references.
- *
- * <p>For example, given the schema:
- *
- * <pre>{@code
- * {
- *   "type": "record",
- *   "name": "TypeA",
- *   "fields": [
- *     {"name": "f1", "type": "TypeB", "subject": "type.b.subject"}
- *   ]
- * }
- * }</pre>
- *
- * <p>This class will attempt to load {@code TypeB}, by calling on the {@link SchemaLoader}, and
- * then parse it looking for anymore references.
+ * <p>Finds any type referred to in the schema, but not defined within the schema. Such external
+ * type references are loaded and recursively checked for external schema references.
  *
  * <h2>Namespacing</h2>
  *
@@ -64,8 +55,8 @@ import java.util.stream.Collectors;
  *   "name": "TypeA",
  *   "namespace": "some.namespace",
  *   "fields": [
- *    {"name": "f1", "type": "TypeB", "subject": "type.b.subject"},
- *    {"name": "f2", "type": "other.namespace.TypeC", "subject": "type.c.subject"}
+ *    {"name": "f1", "type": "TypeB"},
+ *    {"name": "f2", "type": "other.namespace.TypeC"}
  *  ]
  * }
  * }</pre>
@@ -76,9 +67,27 @@ import java.util.stream.Collectors;
  * <h2>Error handling</h2>
  *
  * <p>The finder does not try to validate the supplied schemas are valid Avro. That's left to the
- * Avro libraries. However, they must at least be valid JSON, otherwise exceptions will be thrown.
+ * Avro libraries. However, they must at least be valid JSON.
  */
+@SuppressWarnings("OptionalUsedAsFieldOrParameterType")
 final class AvroReferenceFinder {
+
+    record DetectedSchema(String name, String content, List<DetectedSchema> references) {
+
+        @SuppressWarnings("ReassignedVariable") // False positive.
+        public DetectedSchema {
+            requireNonNull(name, "name");
+            requireNonNull(content, "content");
+            references = List.copyOf(requireNonNull(references, "references"));
+        }
+    }
+
+    record LoadedSchema(String path, String content) {
+        LoadedSchema {
+            requireNonNull(path, "path");
+            requireNonNull(content, "content");
+        }
+    }
 
     /** Responsible for loading the contents of a type's schema, given the type's name. */
     interface SchemaLoader {
@@ -86,14 +95,21 @@ final class AvroReferenceFinder {
         /**
          * Load the schema content.
          *
-         * @param type the name of the type.
+         * @param type the fully-qualified name of the type.
          * @return the content of the schema.
          */
-        String load(String type);
+        LoadedSchema load(String type);
     }
 
     private static final JsonMapper MAPPER =
             JsonMapper.builder().enable(JsonParser.Feature.ALLOW_COMMENTS).build();
+
+    private static final Map<String, Schema.Type> STD_TYPE_NAMES =
+            Arrays.stream(Schema.Type.values())
+                    .filter(type -> type != Schema.Type.UNION)
+                    .collect(
+                            Collectors.toUnmodifiableMap(
+                                    type -> type.toString().toLowerCase(), type -> type));
 
     private final SchemaLoader schemaLoader;
 
@@ -107,61 +123,208 @@ final class AvroReferenceFinder {
     /**
      * Find all the schema references in the supplied {@code schema}.
      *
+     * @param schemaPath the path to the schema file.
      * @param schemaContent the schema content to check for references.
-     * @return an ordered stream of leaf-first referenced schemas, including the supplied {@code
-     *     schema}.
+     * @return an ordered stream of leaf-first referenced external schemas, including the supplied
+     *     {@code schema}.
      */
-    List<DetectedSchema> findReferences(final String schemaContent) {
-        final ParsedSchema schema = ParsedSchema.create("", "", schemaContent);
-
-        final String name = schema.name.orElse("");
-        final String namespace = schema.namespace.orElse("");
-        final String fullyQualifiedName = namespace.isEmpty() ? name : namespace + "." + name;
-
-        final Map<String, List<DetectedSchema>> visited = new ConcurrentHashMap<>();
-        visited.put(fullyQualifiedName, List.of());
-
-        return findReferences(schema, visited);
+    List<DetectedSchema> findReferences(final String schemaPath, final String schemaContent) {
+        final Map<TypeName, List<DetectedSchema>> visited = new ConcurrentHashMap<>();
+        return findReferences(schemaPath, schemaContent, Optional.empty(), visited);
     }
 
     private List<DetectedSchema> findReferences(
-            final ParsedSchema schema, final Map<String, List<DetectedSchema>> visited) {
-        final String type = schema.type.orElse("");
-        if (!"record".equals(type)) {
-            return List.of(new DetectedSchema(schema, List.of()));
-        }
+            final String schemaPath,
+            final String schemaContent,
+            final Optional<TypeName> knownTypeName,
+            final Map<TypeName, List<DetectedSchema>> visited) {
+        final SchemaInfo schema = parseSchema(schemaPath, schemaContent, knownTypeName);
+        visited.put(schema.name, List.of());
 
-        final List<DetectedSchema> detected =
-                schema.nestedTypes.stream()
+        final List<DetectedSchema> externalRefs =
+                schema.externalReferences().stream()
                         .map(
-                                nested -> {
-                                    final List<DetectedSchema> existing = visited.get(nested.name);
+                                typeRef -> {
+                                    final List<DetectedSchema> existing = visited.get(typeRef);
                                     if (existing != null) {
                                         return existing;
                                     }
 
-                                    visited.put(nested.name, List.of());
-
-                                    return visited.compute(
-                                            nested.name,
-                                            (k, v) ->
-                                                    findReferences(
-                                                            ParsedSchema.create(
-                                                                    nested.name,
-                                                                    nested.subject,
-                                                                    loadSchema(nested.name)),
-                                                            visited));
+                                    final LoadedSchema loaded =
+                                            loadSchema(typeRef.fullyQualifiedName());
+                                    return findReferences(
+                                            loaded.path(),
+                                            loaded.content(),
+                                            Optional.of(typeRef),
+                                            visited);
                                 })
                         .flatMap(List::stream)
                         .distinct()
-                        .collect(Collectors.toList());
+                        .toList();
 
-        detected.add(new DetectedSchema(schema, detected));
-
-        return List.copyOf(detected);
+        final List<DetectedSchema> detected = new ArrayList<>(externalRefs);
+        detected.add(
+                new DetectedSchema(
+                        schema.name().fullyQualifiedName(), schema.content(), externalRefs));
+        final List<DetectedSchema> immutable = List.copyOf(detected);
+        visited.put(schema.name, immutable);
+        return immutable;
     }
 
-    private String loadSchema(final String type) {
+    private SchemaInfo parseSchema(
+            final String schemaPath, final String content, final Optional<TypeName> knownTypeName) {
+        try {
+            final JsonNode rootNode = MAPPER.readTree(content);
+
+            final TypeName typeName = namedTypeName(rootNode);
+
+            knownTypeName
+                    .filter(known -> !known.equals(typeName))
+                    .ifPresent(
+                            expected -> {
+                                throw new IllegalArgumentException(
+                                        "Expected schema file to contain type '%s', but contained '%s'"
+                                                .formatted(expected, typeName));
+                            });
+
+            final TypeCollector typeCollector = new TypeCollector();
+            typeCollector.collect(rootNode);
+
+            return new SchemaInfo(schemaPath, content, typeName, typeCollector.externalReferences);
+        } catch (final Exception e) {
+            throw new InvalidSchemaException(schemaPath, content, e);
+        }
+    }
+
+    private static Optional<String> textChild(final String name, final JsonNode node) {
+        return Optional.ofNullable(node.get(name))
+                .filter(JsonNode::isTextual)
+                .map(JsonNode::asText);
+    }
+
+    private static TypeInfo type(final JsonNode typeNode, final String currentNamespace) {
+        if (typeNode.isArray()) {
+            return TypeInfo.stdType(Schema.Type.UNION);
+        }
+
+        if (typeNode.isTextual()) {
+            final String typeName = typeNode.asText();
+            final Schema.Type stdType = STD_TYPE_NAMES.get(typeName);
+            return stdType != null
+                    ? TypeInfo.stdType(stdType)
+                    : TypeInfo.typeReference(typeName, currentNamespace);
+        }
+
+        return textChild("type", typeNode)
+                .map(String::toUpperCase)
+                .flatMap(
+                        name -> {
+                            try {
+                                return Optional.of(Schema.Type.valueOf(name));
+                            } catch (final Exception e) {
+                                return Optional.empty();
+                            }
+                        })
+                .map(TypeInfo::stdType)
+                .orElseGet(TypeInfo::empty);
+    }
+
+    private static final class TypeCollector {
+        private final Set<TypeName> definedTypes = new HashSet<>();
+        private final List<TypeName> externalReferences = new ArrayList<>(0);
+
+        void collect(final JsonNode rootNode) {
+            findTypes(rootNode, "");
+        }
+
+        private void findTypes(final JsonNode node, final String currentNamespace) {
+            final TypeInfo type = type(node, currentNamespace);
+            if (type.referencedType().isPresent()) {
+                final TypeName referencedType = type.referencedType().get();
+                if (!definedTypes.contains(referencedType)
+                        && !externalReferences.contains(referencedType)) {
+                    externalReferences.add(referencedType);
+                }
+            }
+
+            if (type.stdType().isPresent()) {
+                switch (type.stdType().get()) {
+                    case RECORD -> handleRecord(node, currentNamespace);
+                    case ARRAY -> handleArray(node, currentNamespace);
+                    case MAP -> handleMap(node, currentNamespace);
+                    case UNION -> handleUnion(node, currentNamespace);
+                    case ENUM, FIXED -> handleNamedType(node, currentNamespace);
+                    default -> {}
+                }
+            }
+        }
+
+        private String handleNamedType(final JsonNode node, final String currentNamespace) {
+            final String name = textChild("name", node).orElse("");
+            final String namespace = textChild("namespace", node).orElse(currentNamespace);
+
+            definedTypes.add(new TypeName(namespace, name));
+
+            return namespace;
+        }
+
+        private void handleRecord(final JsonNode node, final String currentNamespace) {
+            final String namespace = handleNamedType(node, currentNamespace);
+
+            final Iterator<JsonNode> fields =
+                    Optional.ofNullable(node.get("fields"))
+                            .map(JsonNode::elements)
+                            .orElse(ClassUtil.emptyIterator());
+
+            while (fields.hasNext()) {
+                final JsonNode field = fields.next();
+                Optional.ofNullable(field.get("type"))
+                        .ifPresent(type -> findTypes(type, namespace));
+            }
+        }
+
+        private void handleArray(final JsonNode node, final String currentNamespace) {
+            final JsonNode items = node.get("items");
+            if (items != null) {
+                findTypes(items, currentNamespace);
+            }
+        }
+
+        private void handleMap(final JsonNode node, final String currentNamespace) {
+            final JsonNode values = node.get("values");
+            if (values != null) {
+                findTypes(values, currentNamespace);
+            }
+        }
+
+        private void handleUnion(final JsonNode node, final String currentNamespace) {
+            for (JsonNode unionType : node) {
+                findTypes(unionType, currentNamespace);
+            }
+        }
+    }
+
+    private static TypeName namedTypeName(final JsonNode rootNode) {
+
+        final Optional<Schema.Type> namedType =
+                type(rootNode, "")
+                        .stdType()
+                        .filter(
+                                type ->
+                                        type == Schema.Type.RECORD
+                                                || type == Schema.Type.ENUM
+                                                || type == Schema.Type.FIXED);
+
+        if (namedType.isEmpty()) {
+            return new TypeName("", "");
+        }
+
+        final String namespace = textChild("namespace", rootNode).orElse("");
+        final String name = textChild("name", rootNode).orElse("");
+        return new TypeName(namespace, name);
+    }
+
+    private LoadedSchema loadSchema(final String type) {
         try {
             return Objects.requireNonNull(schemaLoader.load(type), "loader returned null");
         } catch (final Exception e) {
@@ -169,225 +332,62 @@ final class AvroReferenceFinder {
         }
     }
 
-    private static final class NestedType {
-        final String name;
-        final String subject;
+    private record SchemaInfo(
+            String schemaPath, String content, TypeName name, List<TypeName> externalReferences) {}
 
-        NestedType(final String name, final String subject) {
-            this.name = requireNonNull(name, "name");
-            this.subject = requireNonNull(subject, "subject");
+    private record TypeName(String namespace, String name) {
+        TypeName {
+            requireNonNull(namespace, "namespace");
+            requireNonNull(name, "name");
         }
 
-        @Override
-        public boolean equals(final Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
-                return false;
-            }
-            final NestedType that = (NestedType) o;
-            return Objects.equals(name, that.name) && Objects.equals(subject, that.subject);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(name, subject);
-        }
-    }
-
-    public static final class DetectedSchema {
-        private final String name;
-        private final String subject;
-        private final String content;
-        private final List<DetectedSchema> nestedSchemas;
-
-        DetectedSchema(final ParsedSchema source, final List<DetectedSchema> nestedSchemas) {
-            this(source.fullName(), source.subject, source.content, nestedSchemas);
-        }
-
-        DetectedSchema(
-                final String name,
-                final String subject,
-                final String content,
-                final List<DetectedSchema> nestedSchemas) {
-            this.name = requireNonNull(name, "name");
-            this.subject = requireNonNull(subject, "subject");
-            this.content = requireNonNull(content, "content");
-            this.nestedSchemas = List.copyOf(requireNonNull(nestedSchemas, "nestedSchemas"));
-        }
-
-        public String name() {
-            return name;
-        }
-
-        public String subject() {
-            return subject;
-        }
-
-        public String content() {
-            return content;
-        }
-
-        public List<DetectedSchema> references() {
-            return List.copyOf(nestedSchemas);
-        }
-
-        @Override
-        public boolean equals(final Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (!(o instanceof DetectedSchema)) {
-                return false;
-            }
-            final DetectedSchema that = (DetectedSchema) o;
-            return Objects.equals(name, that.name)
-                    && Objects.equals(subject, that.subject)
-                    && Objects.equals(content, that.content)
-                    && Objects.equals(nestedSchemas, that.nestedSchemas);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(name, subject, content, nestedSchemas);
+        String fullyQualifiedName() {
+            return namespace.isEmpty() ? name : "%s.%s".formatted(namespace, name);
         }
 
         @Override
         public String toString() {
-            return "DetectedSchema{"
-                    + "name='"
-                    + name
-                    + '\''
-                    + ", subject='"
-                    + subject
-                    + '\''
-                    + ", content='"
-                    + content
-                    + '\''
-                    + ", nestedSchemas="
-                    + nestedSchemas
-                    + '}';
+            return fullyQualifiedName();
         }
     }
 
-    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
-    private static final class ParsedSchema {
+    private record TypeInfo(Optional<Schema.Type> stdType, Optional<TypeName> referencedType) {
 
-        private final String subject;
-        private final String content;
-        private final Optional<String> type;
-        private final Optional<String> name;
-        private final Optional<String> namespace;
-        private final List<NestedType> nestedTypes;
+        private static final TypeInfo EMPTY = new TypeInfo(Optional.empty(), Optional.empty());
 
-        private ParsedSchema(
-                final String subject,
-                final String content,
-                final Optional<String> type,
-                final Optional<String> name,
-                final Optional<String> namespace,
-                final List<NestedType> nestedTypes) {
-            this.subject = requireNonNull(subject, "subject");
-            this.content = requireNonNull(content, "content");
-            this.type = requireNonNull(type, "type");
-            this.name = requireNonNull(name, "name");
-            this.namespace = requireNonNull(namespace, "namespace");
-            this.nestedTypes = requireNonNull(nestedTypes, "nestedTypes");
+        TypeInfo {
+            requireNonNull(stdType, "stdType");
+            requireNonNull(referencedType, "referencedType");
         }
 
-        public String fullName() {
-            if (name.isEmpty()) {
-                throw new IllegalStateException("Unnamed schema: " + this);
-            }
-            return namespace.map(s -> s + "." + name.get()).orElseGet(name::get);
+        static TypeInfo empty() {
+            return EMPTY;
         }
 
-        private static ParsedSchema create(
-                final String typeName, final String subject, final String content) {
-            try {
-                final JsonNode rootNode = MAPPER.readTree(content);
-                final Optional<String> type = textChild("type", rootNode);
-                final Optional<String> name = textChild("name", rootNode);
-                final Optional<String> namespace = textChild("namespace", rootNode);
-                final List<NestedType> nestedTypes =
-                        findNestedTypesWithSubject(rootNode, namespace.orElse(""));
-                return new ParsedSchema(
-                        subject,
-                        content,
-                        type,
-                        Optional.of(name.orElse(typeName)),
-                        namespace,
-                        nestedTypes);
-            } catch (final Exception e) {
-                throw new InvalidSchemaException(typeName, content, e);
-            }
+        static TypeInfo stdType(final Schema.Type stdType) {
+            return new TypeInfo(Optional.of(stdType), Optional.empty());
         }
 
-        private static Optional<String> textChild(final String name, final JsonNode node) {
-            return Optional.ofNullable(node.get(name))
-                    .filter(JsonNode::isTextual)
-                    .map(JsonNode::asText);
+        static TypeInfo typeReference(final String referencedType, final String currentNamespace) {
+            return new TypeInfo(
+                    Optional.empty(), Optional.of(parseTypeName(referencedType, currentNamespace)));
         }
 
-        private static List<NestedType> findNestedTypesWithSubject(
-                final JsonNode node, final String ns) {
-            final Optional<String> maybeType =
-                    textChild("type", node).filter(text -> !text.isEmpty());
-
-            final Optional<String> maybeSubject =
-                    textChild("subject", node).filter(text -> !text.isEmpty());
-
-            if (maybeType.isPresent() && maybeSubject.isPresent()) {
-                final String type = maybeType.get();
-
-                if ("array".equals(type)) {
-                    return textChild("items", node)
-                            .filter(text -> !text.isEmpty())
-                            .map(items -> new NestedType(namespaced(items, ns), maybeSubject.get()))
-                            .map(List::of)
-                            .orElse(List.of());
-                }
-
-                if ("map".equals(type)) {
-                    return textChild("values", node)
-                            .filter(text -> !text.isEmpty())
-                            .map(items -> new NestedType(namespaced(items, ns), maybeSubject.get()))
-                            .map(List::of)
-                            .orElse(List.of());
-                }
-
-                return List.of(new NestedType(namespaced(type, ns), maybeSubject.get()));
-            }
-
-            final List<NestedType> results = new ArrayList<>(0);
-            for (JsonNode child : node) {
-                results.addAll(findNestedTypesWithSubject(child, ns));
-            }
-            return results;
-        }
-
-        private static String namespaced(final String type, final String ns) {
-            if (ns.isEmpty()) {
-                return type;
-            }
-
-            final boolean alreadyNamespaced = type.contains(".");
-            return alreadyNamespaced ? type : ns + "." + type;
+        private static TypeName parseTypeName(final String type, final String currentNamespace) {
+            final int nsEnd = type.lastIndexOf('.');
+            return nsEnd < 0
+                    ? new TypeName(currentNamespace, type)
+                    : new TypeName(type.substring(0, nsEnd), type.substring(nsEnd + 1));
         }
     }
 
     private static final class InvalidSchemaException extends RuntimeException {
-
-        InvalidSchemaException(final String typeName, final String content, final Exception cause) {
+        InvalidSchemaException(
+                final String schemaPath, final String content, final Exception cause) {
             super(
-                    String.format(
-                            "Schema content invalid. %scontent: %s", named(typeName), content),
+                    "Schema content invalid. schemaPath: %s, content: %s"
+                            .formatted(schemaPath, content),
                     cause);
-        }
-
-        private static String named(final String typeName) {
-            return typeName.isBlank() ? "" : String.format("name: %s, ", typeName);
         }
     }
 
